// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFeaturesOfEntityIds small xml test 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        74.1816382,
        34.530396,
      ],
      "type": "Point",
    },
    "id": "n1",
    "properties": Object {
      "id": "n1",
      "osm_basic--geometry": "point",
      "osm_basic--icon": "circle",
    },
    "type": "Feature",
  },
]
`;

exports[`getFeaturesOfEntityIds small xml test 2`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        74.1816382,
        34.530396,
      ],
      "type": "Point",
    },
    "id": "n2",
    "properties": Object {
      "id": "n2",
      "osm_basic--geometry": "vertex",
      "osm_basic--icon": "circle",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        74.1816382,
        34.530396,
      ],
      "type": "Point",
    },
    "id": "n1",
    "properties": Object {
      "id": "n1",
      "osm_basic--geometry": "vertex",
      "osm_basic--icon": "circle",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          74.1816382,
          34.530396,
        ],
        Array [
          74.1816382,
          34.530396,
        ],
      ],
      "type": "LineString",
    },
    "id": "w1",
    "properties": Object {
      "id": "w1",
      "osm_basic--geometry": "line",
      "osm_basic--tagsClass": "",
    },
    "type": "Feature",
  },
]
`;
